...
		await configureSubtitleLabel()
		await configureSearchBar()
	}

	private func configureTitleLabel() async {
		let label = UILabel()
		label.text = "Split History"
		label.font = .systemFont(ofSize: 32, weight: .bold)
		label.textColor = .label
		label.translatesAutoresizingMaskIntoConstraints = false
		
		await MainActor.run {
			titleLabel = label
...
